syntax = "proto3";

package redisapp;

service Micro {
  // Devuelve el primer gif de una fecha enviada
  // Devuelve nil si no hay gif en esa fecha
  rpc GetGif (RequestGif) returns (Gif) {}
  // Devuelve los top 10 gifs almacenados en redis
  rpc Top10Gifs (RequestFecha) returns (stream Gif) {}
}

message RequestFecha {
  string fecha = 1;
}

message RequestGif {
	string fecha = 1;
	string nombre = 2;
}

message Gif {
  string titulo = 1;
  string contenido = 2;
  int64 contador = 3;
}

